serwice-worker try 11

--- a/static/pwa_test.html
+++ b/static/pwa_test.html
@@ -1,7 +1,10 @@
-{% extends layout.html %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %} PWA {% endblock %}
-
-{% block main %}
-    <h1> PWA </h1>
-{% endblock %}
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+<h1> PWA </h1>
+</body>
+</html>
