--- a/static/js/pwa_test.html
+++ b/static/js/pwa_test.html
@@ -6,5 +6,19 @@
 </head>
 <body>
 <h1> PWA </h1>
+<script>
+	const PATH = 'static/js/service-worker.js';
+
+	let isServiceWorkersSupport = ('serviceWorker' in navigator);
+
+	if (isServiceWorkersSupport) {
+		console.log('Will service worker register?');
+		navigator.serviceWorker.register(PATH).then(function () {
+			console.log("Yes it did.");
+		}).catch(function (err) {
+			console.log("No it didn't. This happened: ", err)
+		});
+	}
+</script>
 </body>
 </html>
